{
    "name": "DefaultInputActions",
    "maps": [
        {
            "name": "Game",
            "id": "203fa56d-9ef8-4fb5-8f14-11663532dfe7",
            "actions": [
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "5d274d19-6554-40bd-9a93-028f31737cca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CursorConfirm",
                    "type": "Button",
                    "id": "84fc90de-f56e-4795-aaa6-a8bf2fdaca28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorCancel",
                    "type": "Button",
                    "id": "53c72e68-2310-4d99-b1dc-f38583412b04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0e820866-1e91-40fb-99e8-1b75eba58be8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e52601e-7969-4a5d-9145-2117c7e273c6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorConfirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f08709f-f32e-4d13-a20b-01d5a359a79f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorCancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}